--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "devicons": "^1.8.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.298.0"
+    "react-icons": "^5.5.0",
+    "simple-icons": "^15.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -24,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
-} 
+}
