--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "devicons": "^1.8.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.298.0",
