feat: dev to api request done

--- a/env.example
+++ b/env.example
@@ -2,7 +2,10 @@
 YOUTUBE_API_KEY=your_youtube_api_key_here
 YOUTUBE_CHANNEL_ID=your_channel_id_here
 
-# RSS Feed URLs
+# Dev.to Integration
+DEVTO_USERNAME=yourusername
+
+# RSS Feed URLs (alternativa)
 BLOG_RSS_URL=https://dev.to/feed/yourusername
 # ou
 # BLOG_RSS_URL=https://medium.com/feed/@yourusername
